WON-90 add documents upload to forms corpo

--- a/app/static_src/sass/basics/_08_tables.scss
+++ b/app/static_src/sass/basics/_08_tables.scss
@@ -189,6 +189,11 @@ table table {
         tr {
             display: table-row;
             background-color: transparent;
+
+            th:not(:first-child) {
+                padding-left: 0;
+                padding-right: 0.7rem;
+            }
         }
     }
     tbody {
