--- a/app/web/cases/templates/cases/case_page.html
+++ b/app/web/cases/templates/cases/case_page.html
@@ -222,7 +222,7 @@
             <thead>
                 <tr>
                     <th>Stap in omslagroute</th>
-                    <th>Organisatie type</th>
+                    <th>Instelling</th>
                     <th>Status</th>
                     <th>Statusdatum</th>
                     <th>Status door</th>
