Updated node-sass to sass

--- a/app/static_src/sass/basics/_04_helper-classes.scss
+++ b/app/static_src/sass/basics/_04_helper-classes.scss
@@ -1,6 +1,9 @@
 // ********************
 // GENERAL LAYOUT SETTINGS/HELPER CLASSES
 // ********************
+@use "01_fonts" as *;
+@use "02_colors" as *;
+@use "03_mediaqueries" as *; 
 
 .svg-sprite {
     display: none;
