--- a/app/static_src/sass/basics/_09_print.scss
+++ b/app/static_src/sass/basics/_09_print.scss
@@ -1,6 +1,9 @@
 // ********************
 // PRINT STYLESHEET
 // ********************    
+@use "01_fonts" as *;
+@use "02_colors" as *;
+@use "03_mediaqueries" as *; 
 
 @media print {
 
