--- a/app/static_src/sass/components/_modal.scss
+++ b/app/static_src/sass/components/_modal.scss
@@ -1,3 +1,6 @@
+@use "../basics/02_colors" as *;
+@use "../basics/03_mediaqueries" as *; 
+
 .container-button--feedback {
   z-index: 100;
   right: 0;
