--- a/app/static_src/sass/sections/_client.scss
+++ b/app/static_src/sass/sections/_client.scss
@@ -1,3 +1,7 @@
+@use "../basics/02_colors" as *;
+@use "../basics/03_mediaqueries" as *; 
+@use "../basics/04_helper-classes" as *;
+
 .section--client{
 
     .section-details-client {
