--- a/app/static_src/sass/sections/_login.scss
+++ b/app/static_src/sass/sections/_login.scss
@@ -1,6 +1,7 @@
 // ********************
 // TRICK FOR SHOWING LOGIN FORM WHEN ANCHOR IS ACTIVE
 // ********************
+@use "../basics/02_colors" as *;
 
 .section--login {
     display: none;
