--- a/app/static_src/sass/components/_footer.scss
+++ b/app/static_src/sass/components/_footer.scss
@@ -1,3 +1,6 @@
+@use "../basics/02_colors" as *;
+@use "../basics/03_mediaqueries" as *; 
+
 footer {
     padding-top: 4rem;
     visibility: hidden;
