--- a/app/static_src/sass/components/_site-navigation.scss
+++ b/app/static_src/sass/components/_site-navigation.scss
@@ -1,3 +1,8 @@
+@use "sass:math";
+@use "../basics/02_colors" as *;
+@use "../basics/03_mediaqueries" as *; 
+@use "../basics/06_site-layout" as *;
+
 .navigation-container {
     position :relative;
     list-style: none;
@@ -50,11 +55,9 @@
     li ul {
         position: absolute;
         background-color: $neutral-grey1;
-
         font-size: 1rem;
-
-        box-shadow: ((($site-max-width - 87.5rem) / 2) + .938rem) 0 0 0 $neutral-grey1, (((87.5rem - $site-max-width) / 2) - .938rem) 0 0 0 $neutral-grey1;
-
+        box-shadow: ((math.div($site-max-width - 87.5rem, 2)) + .938rem) 0 0 0 $neutral-grey1,
+             ((math.div(87.5rem - $site-max-width, 2)) - .938rem) 0 0 0 $neutral-grey1;
         top: 100%;
         left: -.938rem;
         right: -.938rem;
