--- a/app/static_src/sass/sections/_documents.scss
+++ b/app/static_src/sass/sections/_documents.scss
@@ -1,6 +1,9 @@
 // ********************
 // DOCUMENT LISTS FOR DOWNLOADING (and adding new)
 // ********************
+@use "../basics/02_colors" as *;
+@use "../basics/03_mediaqueries" as *; 
+@use "../basics/06_site-layout" as *;
 
 .downloads {
     // padding-bottom: calc(1.687rem * 4);
