WON-135 Enhance case deletion confirmation message

--- a/app/web/cases/templates/cases/case_delete_request_revoke.html
+++ b/app/web/cases/templates/cases/case_delete_request_revoke.html
@@ -19,7 +19,7 @@
     <h2>Cli&euml;nt terugzetten in omslagroute.amsterdam.nl</h2>
     <hr />
     <p>
-        Weet je zeker dat je Pieter de Bakker weer wilt terug wilt zetten in omslagroute.amsterdam.nl?
+        Weet je zeker dat je <strong>{{form.instance.client_name}}</strong> weer wilt terug wilt zetten in omslagroute.amsterdam.nl?
     </p>
     <p><strong>Dit gebeurt er nadat je de cliënt weer terugzet</strong></p>
     <ol>
